[gd_scene load_steps=12 format=3 uid="uid://dttgafuwg32tm"]

[ext_resource type="Script" uid="uid://cwljt4l2e2axk" path="res://title_screen.gd" id="1_hafda"]
[ext_resource type="Texture2D" uid="uid://dhjq3ibcm65lq" path="res://assets/start.png" id="1_v6p8y"]
[ext_resource type="Texture2D" uid="uid://cpoc6g2ungako" path="res://assets/Title2.png" id="2_05l2w"]
[ext_resource type="Texture2D" uid="uid://dlflisaj3j2ha" path="res://assets/ko.png" id="2_tpml5"]
[ext_resource type="Texture2D" uid="uid://cefb1tu8vma2g" path="res://assets/p1_control.png" id="3_hafda"]
[ext_resource type="Texture2D" uid="uid://dddfjua0yep8p" path="res://assets/Start_.png" id="3_jqemp"]
[ext_resource type="Texture2D" uid="uid://cpne0wd5mwb1a" path="res://assets/p2_control.png" id="4_tpml5"]

[sub_resource type="AtlasTexture" id="AtlasTexture_jqemp"]
atlas = ExtResource("2_tpml5")
region = Rect2(0, 0, 232, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_013yr"]
atlas = ExtResource("2_tpml5")
region = Rect2(232, 0, 232, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_8vmu4"]
atlas = ExtResource("2_tpml5")
region = Rect2(464, 0, 232, 144)

[sub_resource type="SpriteFrames" id="SpriteFrames_hafda"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jqemp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_013yr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8vmu4")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hafda")

[node name="EndScreen" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="EndScreen"]
position = Vector2(666, 302)
sprite_frames = SubResource("SpriteFrames_hafda")
frame = 2
frame_progress = 1.0

[node name="TextureButton" type="TextureButton" parent="EndScreen"]
layout_mode = 0
offset_left = 534.0
offset_top = 512.0
offset_right = 774.0
offset_bottom = 584.0
texture_normal = ExtResource("3_jqemp")

[node name="StartScreen" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TextureRect2" type="TextureRect" parent="StartScreen"]
layout_mode = 2
offset_left = 53.0
offset_top = 412.0
offset_right = 339.0
offset_bottom = 698.0
texture = ExtResource("3_hafda")
expand_mode = 1
stretch_mode = 5

[node name="TextureRect" type="TextureRect" parent="StartScreen"]
layout_mode = 2
offset_left = 385.0
offset_top = 63.0
offset_right = 897.0
offset_bottom = 439.0
texture = ExtResource("2_05l2w")

[node name="TextureButton" type="TextureButton" parent="StartScreen"]
layout_mode = 2
offset_left = 549.0
offset_top = 512.0
offset_right = 757.0
offset_bottom = 584.0
texture_normal = ExtResource("1_v6p8y")
stretch_mode = 3

[node name="TextureRect3" type="TextureRect" parent="StartScreen"]
layout_mode = 2
offset_left = 956.0
offset_top = 517.0
offset_right = 1241.0
offset_bottom = 599.0
texture = ExtResource("4_tpml5")
expand_mode = 1
stretch_mode = 5

[connection signal="pressed" from="StartScreen/TextureButton" to="." method="start_the_game"]
